# transport-system-sim

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  agents.md  cloned_repo_manifest.md  config.yaml  disrupted_mobilization_resilience_repo_research.md  generate_report.py  generate_report_figures.py  gpt_image_2_pipeline_prompt.md  main.py  microsim_experiment_proposal_v3.docx  plan.md  public_github_repo_research.md  real_world_simulation_implementation_blueprint.md  realistic_simulation_requirements.md  repo_survey_results.md  report.docx  report_draft.md  requirements.txt  status.md
cloned_repo/: clone_manifest.csv
cloned_repo/Path4GMNS/: CMakeLists.txt
cloned_repo/aequilibrae/: pyproject.toml
cloned_repo/gtfs_kit/: CHANGELOG.rst  README.rst  pyproject.toml
cloned_repo/gtfs_kit/docs/: Makefile
cloned_repo/gtfs_kit/gtfs_kit/: __init__.py  feed.py  helpers.py  miscellany.py  routes.py  stops.py  trips.py
cloned_repo/gtfs_kit/tests/: test_feed.py  test_miscellany.py  test_stops.py
cloned_repo/open-gira/: docker-compose.yml
cloned_repo/routingpy/: .pre-commit-config.yaml  (+3 more)
paper/: paper_draft.md
results/: phase1_ci.csv  phase1_results.csv  phase1_summary.csv  phase2_ci.csv  phase2_results.csv
src/: dispatch.py  disruptions.py  fleet.py  metrics.py  models.py  network.py  policies.py  rail.py  scenario.py  sim_types.py  traffic.py  transfers.py
tests/: test_analysis.py  test_config.py  test_dispatch.py  test_disruptions.py  test_fleet.py  test_metrics.py  test_models.py  test_rail.py  test_scenario.py  test_traffic.py  test_transfers.py
(+93 files in other folders)
